<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:id="@+id/widget_btn"
        android:src="@drawable/contact_default"
        android:contentDescription="@string/widget_btn_desc"
        android:padding="0dp"
        android:layout_marginTop="-2dp" />

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:id="@+id/location_image"
        android:layout_marginTop="-20dp"
        android:layout_marginLeft="45dp"
        android:contentDescription="@string/location_badge_desc"
        android:src="@drawable/ic_dialer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:text="@string/location_text"
        android:id="@+id/location_badge"
        android:textColor="@color/location_badge"
        android:ellipsize="none"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:singleLine="true"
        android:contentDescription="@string/name_badge_desc"
        android:textSize="10sp"
        android:paddingTop="0dp"
        android:paddingBottom="2dp"
        android:layout_marginTop="-15dp"
        android:textStyle="bold"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:text="@string/widget_badge_text"
        android:id="@+id/name_badge"
        android:textColor="@color/name_badge_text"
        android:ellipsize="none"
        android:singleLine="true"
        android:contentDescription="@string/name_badge_desc"
        android:textSize="12sp"
        android:padding="4dp" />

</LinearLayout>